force-app/main/default/objects/Withdrawl_Request__c/Withdrawl_Request__c.object-meta.xml
<CustomObject>
    <label>Withdrawal Request</label>
    <nameField>
        <label>Withdrawl Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Withdrawal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>