force-app/main/default/objects/Withdrawl_Request__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>